add Model Armour agent

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 google-cloud-aiplatform[agent_engines,adk]==1.126.1
 google-adk[eval, a2a]==1.18.0
+google-cloud-modelarmor==0.3.0
 cloudpickle
 google-genai
 google-cloud-discoveryengine
